apps/production/echovote/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echovote-server
  namespace: echovote
spec:
  selector:
    app: echovote-server
  ports:
    - name: http
      port: 3001
      targetPort: 3001
